--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@
   src: url(../fonts/BeautyRegular.ttf);
 }
 /* Reset Style */
+html {
+  height: 100%;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -19,6 +23,7 @@
 }
 
 body {
+  height: 100%;
   background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3)), url(../img/fondoPagina.jpeg);
   background-position: top;
   background-size: cover;
